--- a/bash/config
+++ b/bash/config
@@ -41,7 +41,7 @@ function parse_git_branch {
 
 if [ $(id -u) -eq 0 ];
 then
-  PS1="[$BLUE\h \w$NO_COLOR \[$RED\]\$(parse_git_branch)\[$NO_COLOR\]]# "
+  PS1="[\h \w \[$RED\]\$(parse_git_branch)\[$NO_COLOR\]]# "
 else
-  PS1="[$BLUE\h \w$NO_COLOR \[$RED\]\$(parse_git_branch)\[$NO_COLOR\]]$ "
+  PS1="[\h \w \[$RED\]\$(parse_git_branch)\[$NO_COLOR\]]$ "
 fi
