--- a/bash/config
+++ b/bash/config
@@ -42,9 +42,4 @@ function parse_git_branch {
   echo ${ref#refs/heads/}
 }
 
-if [ $(id -u) -eq 0 ];
-then
-  PS1="\033k\033\\\[\h \W \[$RED\]\$(parse_git_branch)\[$NO_COLOR\]]# "
-else
-  PS1="\033k\033\\\[\h \W \[$RED\]\$(parse_git_branch)\[$NO_COLOR\]]$ "
-fi
+PS1="\033k\033\134[\u@\h \[$GREEN\]\W\[$NO_COLOR\] \[$RED\]\$(parse_git_branch)\[$NO_COLOR\]]\n\$ "
