--- a/bash/config
+++ b/bash/config
@@ -6,4 +6,4 @@ function parse_git_branch {
   echo ${ref#refs/heads/}
 }
 
-PS1="\033k\033\134[\u@\h \[$GREEN\]\w\[$NO_COLOR\] \[$RED\]\$(parse_git_branch)\[$NO_COLOR\]]\n\$ "
+PS1="\033k\033\134[\u@\h \[$GREEN\]\w\[$NO_COLOR\] \[$RED\]\$(parse_git_branch)\[$NO_COLOR\]]\n\\$ "
