--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,3 +2,11 @@ set -g mode-mouse on
 set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
+
+unbind C-b
+set -g prefix ^A
+bind a send-prefix
+
+# start non-login shell
+# otherwise ~/.zshrc will be included twice
+# set -g default-command /bin/zsh
