Clear history tmux binding

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,3 +10,5 @@ bind a send-prefix
 # start non-login shell
 # otherwise ~/.zshrc will be included twice
 # set -g default-command /bin/zsh
+
+bind -n C-k clear-history
