reattach-to-user-namespace in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,8 @@ set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
 
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 unbind C-b
 set -g prefix ^A
 bind a send-prefix
