--- a/bash/config
+++ b/bash/config
@@ -7,6 +7,5 @@ function parse_git_branch {
 }
 
 PS1BRANCH="\[$RED\]\$(parse_git_branch)\[$NO_COLOR\]"
-PS1RVM="\[$BLUE\]\$(~/.rvm/bin/rvm-prompt)\[$NO_COLOR\]"
 
-PS1="\033k\033\134[\u@\h $PS1BRANCH $PS1RVM \[$GREEN\]\w\[$NO_COLOR\]]\n\\$ "
+PS1="\033k\033\134[\u@\h $PS1BRANCH \[$GREEN\]\w\[$NO_COLOR\]]\n\\$ "
