--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+#set -g mode-mouse on
+#set -g mouse-resize-pane on
+#set -g mouse-select-pane on
+#set -g mouse-select-window on
 
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
