Replace solarized with gruvbox

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,8 @@
 
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
+set -g default-terminal "screen-256color"
+
 unbind C-b
 set -g prefix ^A
 bind a send-prefix
