--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,7 @@
 #set -g mouse-select-window on
 
 set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g history-limit 10000
 
 set -g default-terminal "screen-256color"
 
