--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,7 @@
 #set -g mouse-select-pane on
 #set -g mouse-select-window on
 
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 set -g default-terminal "screen-256color"
 
