--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,7 @@
 #set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 set-option -g history-limit 10000
+set -sg escape-time 0
 
 set -g default-terminal "screen-256color"
 
