Add bindings for resizing

--- a/tmux.conf
+++ b/tmux.conf
@@ -20,3 +20,9 @@ set-option -g set-titles on
 set -g focus-events on
 
 set -g status-left-length 40
+
+# Resizing
+bind-key -r '+' resize-pane -U 10
+bind-key -r '-' resize-pane -D 10
+bind-key -r '<' resize-pane -L 10
+bind-key -r '>' resize-pane -R 10
